# simple-fast-multiagent-deep-researcher

./: .gitignore  README.md  app.py  coordinator.py  env.example  planner.py  prompts.py  pyproject.toml  scraper.py  search.py  task_splitter.py
description/: DESCRIPTION.md  app-flow.excalidraw
example-results/: 1_research_plan.md  2_subtasks.json  3_subtasks_results.txt  4_synthesis_prompt.md  5_research_result.md  README.md
